--- a/src/AppBundle/Resources/views/Acteur/editer.html.twig
+++ b/src/AppBundle/Resources/views/Acteur/editer.html.twig
@@ -1,12 +1,25 @@
-<h1>Ajouter un acteur</h1>
+{% extends 'base.html.twig' %}
 
-{% if message %}
-    <p>{{ message }}</p>
-{% endif %}
+{% block title %}Ajouter un acteur{% endblock %}
 
-{{ form_start(form) }}
-    {{ form_widget(form) }}
-    <input type="submit" value="Valider">
-{{ form_end(form) }}
+{% block body %}
+    {% if message %}
+        <p>{{ message }}</p>
+    {% endif %}
 
-<p><a href="{{ path('acteur_lister') }}">Retour à la liste des acteurs</a></p>
+    {{ form_start(form) }}
+        {{ form_widget(form) }}
+        <div class="col-md-offset-2">
+            <input class="btn btn-primary" type="submit" value="Valider">
+            <a class="btn btn-default" href="{{ path('acteur_lister') }}">Retour à la liste des acteurs</a>
+        </div>
+    {{ form_end(form) }}
+
+{% endblock %}
+
+{% block javaScript %}
+    {{ parent() }}
+    <script>
+        $('.datepicker').datetimepicker({});
+    </script>
+{% endblock %}
