--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -4,4 +4,10 @@
 
 {% block body %}
 
+    <h3>Top des acteurs les plus jeunes</h3>
+    {{ render(controller('AppBundle:Default:topActeurs', { max: 3 })) }}
+
+    <h3>Top films</h3>
+    {{ render(controller('AppBundle:Default:topFilms')) }}
+
 {% endblock %}
