--- a/src/AppBundle/Resources/views/Acteur/lister.html.twig
+++ b/src/AppBundle/Resources/views/Acteur/lister.html.twig
@@ -3,33 +3,8 @@
 {% block title %}Liste des acteurs{% endblock %}
 
 {% block body %}
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th><i class="fa fa-user"></i> Acteur</th>
-                <th><i class="fa fa-birthday-cake"></i> Date de naissance</th>
-                <th><i class="fa fa-venus-mars"></i> Sexe</th>
-                <th><i class="fa fa-wrench"></i> Actions</th>
-            </tr>
-        </thead>
-        {% for a in acteurs %}
-        <tbody>
-            <tr>
-                <td>{{ a.prenom }} {{ a.nom }}</td>
-                <td>{{ a.dateNaissance|date('d/m/Y') }}</td>
-                <td>{{ a.sexe }}</td>
-                <td>
-                    <a href="{{ path('acteur_modifier', {'id': a.id}) }}"><i class="fa fa-edit" style="color: dimgrey;"></i></a>
-                    <a href="{{ path('acteur_supprimer', {'id': a.id}) }}"><i class="fa fa-trash" style="color: dimgrey;"></i></a>
-                </td>
-            </tr>
-        </tbody>
-        {% else %}
-            <tr>
-                <td>Aucun acteur n'a été trouvé.</td>
-            </tr>
-        {% endfor %}
-    </table>
 
+    {% include 'AppBundle:Acteur:liste.html.twig' with {'acteurs': acteurs} %}
     <p><a href="{{ path('acteur_ajouter') }}">Ajouter un acteur</a></p>
+
 {% endblock %}
